fixed icon visibility on hover

--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,9 @@ label.valid {
     }
 }
 
+.black-hover:hover {
+    color: black;
+}
 
 
 
